--- a/someCss.html
+++ b/someCss.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Animal Crossing Page</title>
-    <link href="anExtneral.css" rel="stylesheet" type="text/css" />
+    <link href="anExternal.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class= "container">
